implémentation du dark mode en fonction de l'heure de la journée / gestion de bug concernant des dépassement de conteneur / optimisation du code

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,6 +4,20 @@ $color-3: #D6D6D6;
 $color-4:#313B47;
 $color-5:#F1F1F3;
 $color-6:#F5F5F5;
+$color-7:#000000;
+
+$border: none;
+
+:root{
+    --color-1: $color-1;
+    --color-2: $color-2;
+    --color-3: $color-3;
+    --color-4: $color-4;
+    --color-5: $color-5;
+    --color-6: $color-6;
+    --color-7: $color-7;
+    --border: $border;
+}
 
 @font-face {
     font-family: 'calculator';
@@ -18,8 +32,9 @@ $color-6:#F5F5F5;
 $font-1: 'calculator';
 $font-2: 'FrederickatheGreat-Regular';
 
+
 @mixin linearGradient {
-    background-image: linear-gradient(-10deg, $color-5, $color-6);
+    background-image: linear-gradient(-10deg, var(--color-5), var(--color-6));
   }
 
 @mixin flex ($content, $direction, $align){
@@ -48,7 +63,7 @@ main{
     align-items: center;
     max-width: 1000px;
     border-radius: 5px;
-    background-color: $color-3;
+    background-color: var(--color-3);
     @media screen and(min-width: 375px){
      max-width: 80%;
     }
@@ -78,7 +93,7 @@ main{
     font-family: $font-1;
     font-weight: 900;
     font-size: 1.5rem;
-    color: black;
+    color: var(--color-7);
     cursor: pointer;
 }
 
@@ -87,22 +102,29 @@ main{
     font-family: $font-1;
     height: 20vh;
     margin: 0rem 0.5rem;
-    background-color: $color-4;
-    color: $color-1;
+    background-color: var(--color-4);
+    color: var(--color-1);
     border-radius: 5px;
+ 
+    
     @media screen and(min-width: 770px){
         margin: 0rem 3rem;
     }
     &_resultat{
         height: 12vh;
         font-size: 3.5rem;     
-        padding: 0rem 1.5rem 1rem 0rem;   
+        padding: 0rem 1.5rem 0.5rem 0rem;
+        max-width: 100%;
+        overflow-x: auto;
+        overflow-y: hidden;
     }
     &_calcul{
-        @include flex(center, row, center );
         height: 8vh;
         font-size: 1.2rem;
-        padding: 0rem 1.5rem 0.5rem 0rem; 
+        padding: 0.5rem 1.5rem 0.5rem 0rem; 
+        max-width: 100%;
+        overflow-x: auto;
+        overflow-y: hidden;
     }
 }
 
@@ -111,7 +133,6 @@ main{
     height: 65vh;
     margin: 1rem 0.5rem;
     gap: 0.8rem;   
-    color: $color-2;
     @media screen and(min-width: 770px){
         margin: 1rem 3rem;
     }
@@ -121,8 +142,15 @@ main{
     @include linearGradient();
     cursor: pointer;
     border-radius: 5px;
+    color: var(--color-2);
     box-shadow: 0px 4px 7px -3px rgba(0,0,0,0.5);
-    border: none;
+    border: var(--border);
+    &:hover{
+        box-shadow: 0px 4px 5px -10px rgba(0,0,0,0.5);
+        border-right: 0.5px solid rgba(0,0,0,0.5);
+        border-left: 0.5px solid rgba(0,0,0,0.5);
+        border-bottom: none;
+    }
 }
 
 .historiqueScreen{
@@ -133,7 +161,7 @@ main{
     margin: 0rem 0.5rem;
     padding: 1rem 1rem;
     gap: 1rem;
-    background-color: $color-4;
+    background-color: var(--color-4);
     color: whitesmoke;
     border-radius: 5px;
     @media screen and(min-width: 770px){
@@ -142,8 +170,8 @@ main{
 }
 
 .deleteHistori{
-width: 100%;
-@include flex(flex-start, column, center );
+    @include flex(flex-start, column, center );
+    width: 100%;
 }
 .btnBottom{
     width: 70%;
@@ -153,4 +181,14 @@ width: 100%;
     font-size: 1.3rem;
     color: black;
     cursor: pointer;
+}
+
+.lsHistori{
+    max-height: 83vh;
+    width: 100%;
+    overflow-y: auto;
+    &__divCalcul{
+        padding: 0.8rem 0rem; 
+        overflow: auto;
+    }
 }
